--- a/web/readium-annotator/demo/index.html
+++ b/web/readium-annotator/demo/index.html
@@ -515,6 +515,10 @@
         <pre id="selector-out-rangexpath"></pre>
       </div>
       <div>
+        <label for="selector-out-textfragment">RangeXpathSelector : </label>
+        <pre id="selector-out-textfragment"></pre>
+      </div>
+      <div>
         <style>
           #input {
             width: 700px;
